<resources>
    <string name="app_name">TP2</string>
    <string name="title">Titre</string>
    <string name="star_wars">Star Wars : Episode IV</string>
    <string name="about">A propos du film</string>
    <string name="star_warsFr">La Guerre des Etoiles : Episode IV</string>
    <string name="titleO">Titre d\'origine</string>
    <string name="desc">Description</string>
    <string name="desc_star_wars">Il y a bien longtemps, dans une galaxie très lointaine. La guerre civile fait rage entre l\'Empire galactique et l\'Alliance rebelle. Capturée par les troupes de choc de l\'Empereur menées par le sombre et impitoyable Dark Vador, la princesse Leia Organa dissimule les plans de l'Etoile Noire, une station spatiale invulnérable, à son droïde R2-D2 avec pour mission de les remettre au Jedi Obi-Wan Kenobi.</string>
    <string name="keywords">Mots clés</string>
    <string name="keywords_star_wars">Lightsaber, Jedi, Force, Father</string>
    <string name="share">Partager</string>
    <string name="comment">Commenter</string>
    <string name="like">Aimer</string>
    <string name="hint">Say something ...</string>
    <string name="comment1">I love this movie, Hello there/20</string>
    <string name="movieTitle">Page Title</string>
    <string name="backToTitle"><![CDATA[< Back to title]]></string>
    <string name="commentList">Liste de commentaires</string>
    <string name="back"><![CDATA[< Retour]]></string>
    <string name="categoryTitle">Catégories</string>
    <string name="close"><![CDATA[< Fermer]]></string>
    <string name="backToMoviesList"><![CDATA[< Retour à la liste des films]]></string>
    <string name="displayCategories"><![CDATA[< Catégories]]></string>
    <string name="movieList">Liste des films</string>
</resources>
